# xraygraph-bench

./: .gitignore  BENCHMARK-SERVER-SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  METHODOLOGY.md  README.md  ldbc_load_bolt.py  ldbc_load_bulk.py  pyproject.toml  requirements.txt  run_all_benchmarks.sh
.github/workflows/: lint.yml  test.yml  validate.yml
benchmarks/: README.md
benchmarks/suites/analytical/budgeted-path-search/: benchmark.yaml
benchmarks/suites/analytical/edge-aggregate/: benchmark.yaml
benchmarks/suites/analytical/frontier-profile/: benchmark.yaml
benchmarks/suites/analytical/live-aggregate/: benchmark.yaml
benchmarks/suites/analytical/neighborhood-stats/: benchmark.yaml
benchmarks/suites/analytical/query-budget-enforcement/: benchmark.yaml
benchmarks/suites/analytical/semantic-search/: benchmark.yaml
benchmarks/suites/analytical/similarity-clustering/: benchmark.yaml
benchmarks/suites/analytical/topk-reachable/: benchmark.yaml
benchmarks/suites/code-intelligence/complexity-analysis/: benchmark.yaml
benchmarks/suites/code-intelligence/coupling-analysis/: benchmark.yaml
benchmarks/suites/code-intelligence/dead-code-detection/: benchmark.yaml
benchmarks/suites/code-intelligence/full-health-report/: benchmark.yaml
benchmarks/suites/code-intelligence/impact-analysis-procedure/: benchmark.yaml
benchmarks/suites/compile/: README.md
benchmarks/suites/compile/cold-vs-warm/: benchmark.yaml
benchmarks/suites/compile/mixed-query-workload/: benchmark.yaml
benchmarks/suites/core-executor/: README.md
benchmarks/suites/end-to-end/: README.md
benchmarks/suites/graph-breakers/: README.md
benchmarks/suites/public-compare/: README.md
datasets/: README.md
datasets/code-graph/: README.md
datasets/ogb/: README.md
datasets/provenance/: README.md
datasets/snap/: README.md
datasets/synthetic/: README.md
docs/: adapter-model.md  benchmark-categories.md  benchmark-philosophy.md  reproducibility.md  result-schema.md  roadmap.md
docs/bugs/: 2026-04-06-connection-drop-sustained-write-load.md
docs/superpowers/plans/: 2026-03-31-phase1-rust-core.md  2026-03-31-phase2-adapters.md  2026-04-01-phase3-dataset-pipeline.md  2026-04-05-emergent-edge-runner.md
docs/superpowers/specs/: 2026-03-31-full-implementation-design.md
examples/: 3-hop-function.json  sample-benchmark.yaml  sample-report.html  sample-result.json  scan-filter-benchnode.json  simple-return.json
results/: BENCHMARK-RESULTS-20260417-FINAL.md  BENCHMARK-RESULTS-20260417.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/xraybench-checksum/: Cargo.toml
rust/xraybench-checksum/src/: canonical.rs  hasher.rs  lib.rs  structural.rs
rust/xraybench-compare/: Cargo.toml
rust/xraybench-compare/src/: diff.rs  lib.rs  matrix.rs  significance.rs
rust/xraybench-generators/: Cargo.toml
rust/xraybench-generators/src/: chain.rs  community.rs  deep_traversal.rs  hub.rs  io.rs  lib.rs  power_law.rs  uniform.rs
rust/xraybench-py/: Cargo.toml
rust/xraybench-py/src/: checksum.rs  compare.rs  generators.rs  lib.rs  stats.rs  timing.rs
rust/xraybench-stats/: Cargo.toml
rust/xraybench-stats/src/: bootstrap.rs  lib.rs  outlier.rs  percentile.rs  regression.rs  tdigest.rs
rust/xraybench-timing/: Cargo.toml
rust/xraybench-timing/src/: calibration.rs  clock.rs  harness.rs  lib.rs  warmup.rs
rust/xraybench-types/: Cargo.toml
rust/xraybench-types/src/: lib.rs
schemas/: benchmark.spec.schema.json  dataset.manifest.schema.json  result.schema.json
tests/: test_cli_emergent.py  test_compare.py  test_dashboard.py  test_emergent_collector.py  test_export.py  test_ingest_runner.py  test_phases.py  test_report.py  test_runner.py  test_timeseries.py
tests/adapters/: test_capabilities.py  test_dataset_loader.py  test_memgraph.py  test_neo4j.py  test_overhead.py  test_validation.py  test_xray_protocol.py  test_xraygraphdb.py  test_xraygraphdb_native.py
tests/datasets/: test_cli_generate.py  test_dataset_manager.py  test_datasets.py  test_snap_download.py
tests/rust_core/: test_checksum.py  test_compare.py  test_generators.py  test_stats.py  test_timing.py
tools/xraybench/: __init__.py  cli.py  compare.py  dashboard.py  dataset_manager.py  datasets.py  emergent_collector.py  export.py  ingest_runner.py  load_test.py  loader.py  models.py  phases.py  report.py  runner.py  schema.py  timeseries.py
tools/xraybench/adapters/: __init__.py  base.py  capabilities.py  dataset_loader.py  memgraph.py  neo4j.py  overhead.py  validation.py  xray_protocol.py  xraygraphdb.py  xraygraphdb_native.py
tools/xraybench/generators/: __init__.py  synthetic.py
tools/xraybench/smoke/: __init__.py  multi_protocol_smoke_test.py  smoke_test.py
(+52 files in other folders)
