[workspace]
resolver = "2"
members = [
    "xraybench-types",
    "xraybench-timing",
    "xraybench-stats",
    "xraybench-generators",
    "xraybench-checksum",
    "xraybench-compare",
    "xraybench-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["eMTAi Labs"]

[workspace.dependencies]
blake3 = "1.5"
pyo3 = { version = "0.22", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
