[package]
name = "xraybench-checksum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Correctness validation and checksumming for xraybench"

[dependencies]
xraybench-types = { path = "../xraybench-types" }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
