[package]
name = "xraybench-timing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "High-resolution timing harness for xraybench"

[dependencies]
xraybench-types = { path = "../xraybench-types" }
serde_json = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
